# CLWM

./: .gitignore  Cargo.toml  readme.md
clwm_cli/: Cargo.toml
clwm_cli/src/: command_macros.rs  main.rs
clwm_lib/: Cargo.toml
clwm_lib/sqlite_sqls/attribute/: new.sql  update.sql
clwm_lib/sqlite_sqls/attribute/find/: by_parent_noun_id.sql  by_parent_noun_id_and_attribute_type_id.sql  by_row_id.sql
clwm_lib/sqlite_sqls/attribute_type/: update.sql
clwm_lib/sqlite_sqls/attribute_type/find/: by_all.sql  by_row_id.sql
clwm_lib/sqlite_sqls/attribute_type/history/: new.sql
clwm_lib/sqlite_sqls/data_type/: new.sql
clwm_lib/sqlite_sqls/data_type/find/: latest_by_all.sql
clwm_lib/sqlite_sqls/noun/find/: by_name.sql
clwm_lib/sqlite_sqls/noun_type/: new.sql  update.sql
clwm_lib/src/: clwm.rs  clwm_error.rs  clwm_file.rs  data_interface.rs  lib.rs  model.rs
sqlite_sqls/attribute/find/: by_all.sql  by_id.sql  by_parent_attribute_id.sql  by_parent_attribute_id_and_attribute_type_id.sql
sqlite_sqls/attribute/history/: new.sql
sqlite_sqls/attribute_type/: new.sql
sqlite_sqls/attribute_type/find/: by_id.sql  by_name.sql
sqlite_sqls/data_type/: new.sql
sqlite_sqls/data_type/find/: all_by_all.sql  all_by_name.sql  by_row_id.sql  latest_by_all.sql  latest_by_name.sql
sqlite_sqls/noun/: new.sql  update.sql
sqlite_sqls/noun/find/: by_all.sql  by_id.sql  by_row_id.sql
sqlite_sqls/noun_type/find/: by_all.sql
src/: clwm.rs  clwm_error.rs  clwm_file.rs  command_macros.rs  data_interface.rs  main.rs  model.rs
src/data_interfaces/: data_interface_sqlite.rs
(+10 files in other folders)
