[package]
name = "clwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.1", features=['derive']}
sqlx = {version="0.6.3", features=["sqlite", "runtime-tokio-native-tls"]}
diffy = "0.3.0"
anyhow = "1.0"
tokio = { version = "1.20.0", features = ["macros"]}
async-trait = "0.1.68"
serde = { version="1.0.163", features = ["derive"]}
toml = "0.7.4"
chrono = "0.4.26"
thiserror = "1.0.40"
rmp-serde = "1.1.1"
serde_json = "1.0"
edit = "0.1.4"
