[package]
name = "clwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clwm_lib = { path = "../clwm_lib" }
clap = {version="4.3.1", features=['derive']}
tokio = { version = "1.20.0", features = ["macros"]}
toml = "0.7.4"
anyhow = "1.0"
edit = "0.1.4"